# pony-orm-registry

./: README.md
pony_crud/: database.db  main.py  pyproject.toml  text.py
